objects/Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Related Account)</relationshipLabel>
        <relationshipName>LPD_Relationships3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Account)</relationshipLabel>
        <relationshipName>LPD_Relationships2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Practice or Veterinarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>CAG_Relationships</fullName>
        <active>true</active>
        <description>This is the Record Type to display CAG relationships.</description>
        <label>CAG Relationships</label>
    </recordTypes>
    <recordTypes>
        <fullName>LPD_Relationships</fullName>
        <active>true</active>
        <description>This is the Record Type to display LPD relationships</description>
        <label>LPD Relationships</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>